environment and template fixes
Signed-off-by: Micah Pegman <mpegman@octolabs.io>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
-ipython
-nbformat
-typer[all]>=0.9.0
-pandas
 taegis-sdk-python
+ipython
+notebook
+nbformat
+nbclient
+nbconvert
+ipylab
+papermill
+typer
+pandas
+pandas[excel]
 Jinja2
 compress_pickle>=2.1.0
 gql
