--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,23 +18,29 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
-    "click",
-    "compress_pickle>=2.1.0",
-    "dataclasses_json",
-    "gql",
-    "ipynbname",
+    "taegis-sdk-python",
     "ipython",
-    "Jinja2",
+    "notebook",
     "nbformat",
+    "nbclient",
+    "nbconvert",
+    "ipylab",
+    "papermill",
+    "typer",
     "pandas",
     "pandas[excel]",
+    "Jinja2",
+    "compress_pickle>=2.1.0",
+    "gql",
+    "dataclasses_json",
+    "click",
     "requests",
-    "taegis-sdk-python",
-    "typer[all]>=0.9.0",
+    "ipynbname",
     "panel",
-    "tabulator",
+    "tabulator",  
 ]
 
 [project.optional-dependencies]
