add datagrid support
Signed-off-by: Micah Pegman <mpegman@octolabs.io>
Signed-off-by: Cristian Vasilica <cvasilica@secureworks.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ dependencies = [
 
 [project.optional-dependencies]
 dev = ["black", "pylint", "jupyter"]
+grid = ["ipydatagrid"]
 
 [project.scripts]
 taegis = "taegis_magic.cli:cli"
