--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
-    "taegis-sdk-python",
+    "taegis-sdk-python>=1.2.25",
     "ipython",
     "notebook",
     "nbformat",
