--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
 ]
 dependencies = [
-    "taegis-sdk-python>=1.6.0",
+    "taegis-sdk-python>=1.6.2",
     "ipython",
     "notebook",
     "nbformat",
@@ -34,7 +34,7 @@ dependencies = [
     "pandas[excel]",
     "Jinja2",
     "compress_pickle>=2.1.0",
-    "gql<4",
+    "gql>=4",
     "dataclasses_json",
     "click",
     "requests",
