--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
     "ipylab",
     "papermill",
     "typer",
-    "pandas",
+    "pandas>=2.1,<3.0",
     "pandas[excel]",
     "Jinja2",
     "compress_pickle>=2.1.0",
